--- a/Lesson-8/style.css
+++ b/Lesson-8/style.css
@@ -73,7 +73,7 @@ h2 {
   border-radius: 10px;
 } */
 
-.A,
+/* .A,
 .B,
 .C {
   width: 100px;
@@ -87,4 +87,13 @@ h2 {
   width: 100px;
   height: 30px;
   transition: 0.3s all;
-}
+} */
+
+/* .paragraph_style {
+  background-color: tomato;
+  color: black;
+  font-size: 1.4rem;
+  padding: 1rem;
+  display: inline-block;
+  transition: 1s all;
+} */
