--- a/Lesson-8/style.css
+++ b/Lesson-8/style.css
@@ -89,11 +89,11 @@ h2 {
   transition: 0.3s all;
 } */
 
-.h1style {
+/* .h1style {
   background-color: tomato;
   color: black;
   font-size: 1.4rem;
   padding: 1rem;
   display: inline-block;
   transition: 1s all;
-}
+} */
